ENGINE V1 production baseline: docs, profiles, strict AI verifier, env patterns

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
-# Hedera Testnet Operator (for Node / advanced usage)
-HEDERA_ACCOUNT_ID=0.0.XXXXXXX
-HEDERA_PRIVATE_KEY=302e020100300506032b657004220420REPLACE_WITH_PRIVATE_KEY
-
+﻿# Hedera Operator (no real keys in repo)
+OPERATOR_ID=0.0.xxxxxx
+OPERATOR_KEY=302e020100300506032b657004220420...
+# Audit and DID topics
+DID_TOPIC_ID=0.0.7462776
+AUDIT_TOPIC_ID=0.0.7462600
+# REC tokens
+REC_TOKEN_ID=0.0.7462931
+# Network
 HEDERA_NETWORK=testnet
-HEDERA_MIRROR_NODE=https://testnet.mirrornode.hedera.com
-HASHSCAN_BASE_URL=https://hashscan.io/testnet
